--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    // SLF4J.
+    implementation 'org.slf4j:slf4j-api:2.0.0-alpha1'
+    // runtimeOnly "com.github.tony19:logback-android:2.0.0".
+    testImplementation "ch.qos.logback:logback-classic:1.3.0-alpha4"
+
 }
