--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,11 @@ dependencies {
     // runtimeOnly "com.github.tony19:logback-android:2.0.0".
     testImplementation "ch.qos.logback:logback-classic:1.3.0-alpha4"
 
+    // RecyclerView: https://developer.android.com/jetpack/androidx/releases/recyclerview.
+    implementation "androidx.recyclerview:recyclerview:1.2.0-alpha01"
+    // SwipeRefreshLayout https://developer.android.com/jetpack/androidx/releases/swiperefreshlayout.
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha03"
+
+
+
 }
