--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,18 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha03"
 
 
+    // ThreeTen Android Backport.
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
+
+    // Testing.
+    // testImplementation 'junit:junit:4.12'.
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
+    testImplementation 'org.apache.commons:commons-lang3:3.9'
+
+    // Testing (Android).
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    
 
 }
