chore(consumeAPI): repositories for consume the API

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,20 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    // Retrofit: https://square.github.io/retrofit/
+    def retrofit_version = "2.7.1"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    // Gson: https://github.com/google/gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    // Commons Lang3: https://commons.apache.org/proper/commons-lang/
+    implementation 'org.apache.commons:commons-lang3:3.9'
+
+    // Hashing functions
+    // https://github.com/OpenHFT/Zero-Allocation-Hashing
+    implementation "net.openhft:zero-allocation-hashing:0.10.1"
 
 
 }
