--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,16 +55,16 @@ dependencies {
     // SLF4J.
     implementation 'org.slf4j:slf4j-api:2.0.0-alpha1'
     // runtimeOnly "com.github.tony19:logback-android:2.0.0".
-    testImplementation "ch.qos.logback:logback-classic:1.3.0-alpha4"
+    testImplementation "ch.qos.logback:logback-classic:1.3.0-alpha5"
 
     // RecyclerView: https://developer.android.com/jetpack/androidx/releases/recyclerview.
     implementation "androidx.recyclerview:recyclerview:1.2.0-alpha01"
     // SwipeRefreshLayout https://developer.android.com/jetpack/androidx/releases/swiperefreshlayout.
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha03"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-beta01"
 
 
     // ThreeTen Android Backport.
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.2'
 
 
     // Testing.
@@ -96,11 +96,6 @@ dependencies {
 
     // Prettytime.
     implementation "org.ocpsoft.prettytime:prettytime:4.0.2.Final"
-
-    //complement for fix zone time.
-    // https://mvnrepository.com/artifact/org.threeten/threetenbp
-    implementation 'org.threeten:threetenbp:1.4.1'
-
 
 
 
