--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.0.0-alpha09"
 
         // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // in the individual module build.gradle files.
     }
 }
 
@@ -16,6 +16,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        //Implement toasty repository.
+        maven { url "https://jitpack.io" }
     }
 }
 
