chore(fresco): add fresco repository and dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,9 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
+    // Version de NDK a utilizar
+    ndkVersion "21.0.6011959-rc2"
+
     defaultConfig {
         applicationId "cl.ucn.disc.dsm.charlie.randomnews"
         minSdkVersion 27
@@ -100,5 +103,9 @@ dependencies {
     // Toasty https://github.com/GrenderG/Toasty
     implementation 'com.github.GrenderG:Toasty:1.4.2'
 
+    // Fresco (Images):
+    def fresco_version = "2.1.0"
+    implementation "com.facebook.fresco:fresco:$fresco_version"
+    implementation "com.facebook.fresco:imagepipeline-okhttp:$fresco_version"
 
 }
