--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,9 @@ dependencies {
     implementation "com.facebook.fresco:fresco:$fresco_version"
     implementation "com.facebook.fresco:imagepipeline-okhttp:$fresco_version"
 
+    // Okhttp: https://square.github.io/okhttp/
+    def okhttp_version = "4.3.0"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
+
 }
