--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
+        maven { url "https://dl.bintray.com/ongakuer/maven/" }
+        maven { url "https://jcenter.bintray.com/" }
     }
+
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.0-alpha09"
 
